students/mandigrant/tabs/style.css
body {
	background-color:#f1f1f1;
	font-size:1em;
	font-family: 'Varela Round', sans-serif;
	background:url('starfield.jpg');
	background-size:1500px;
	color:yellow;
}

h1 {
	text-align:center;
}

.error {
	font-size:.8em;
	color:red;
}

.nav { 
	display:block;
	width:70%;
	max-width:70%;
	margin:5px auto;
	display: flex; 
  	justify-content: space-around;
  	color:black;
}

.movieDataContainer {
	width:600px;
	height:460px;
	margin:5px auto;
	border-radius:8px;
	border:yellow 2px solid;
	background-color:rgba(0,0,0,0.8);
	overflow-y:scroll;
}

.tab {
	padding:10px;
	border-radius:8px;
	background-color:yellow;
	cursor:pointer;
}

.tab:hover{ 
	background-color:white;
	color:blue;
}

.tabSelected {
	background-color:white;
	color:blue;
}

ul { 
padding:0px;
}
ul li { 
	display:inline;
	list-style-type:none;
	margin:5px;
	padding:0;
}

.contentsContainer {
	margin:auto;
	width:500px;
	height:100%;
}

.contentsContainer > div { 
	display:none;
}

.ending {
	display:none;
}

